<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright Jeffrey Pugh (pipper.publishing@gmail.com) (c) 2015. All rights reserved.
  -->

<resources>

    <string name="app_name">Five Kings</string>
    <string name="Joker">Joker</string>
    <string name="Score">Scores</string>
    <string name="scores_after">Scores after %s\'s round</string>
    <string name="current_round">Round of %s\'s</string>
    <string name="current_cards">Current cards</string>
    <string name="current_melds">Current melds</string>
    <string name="cumulative_score">Cumulative Score</string>
    <string name="Draw">Draw</string>
    <string name="Discard">Discard</string>
    <string name="startGame">Start Game</string>
    <string name="deals">%1$s dealt</string>
    <string name="nextPlayer">Next Player %s</string>
    <string name="wentOut">%1$s went out - last turns!</string>
    <string name="computerTurnInfo">%1$s drew from the %3$s pile and discarded the %4$s</string>
    <string name="humanTurnInfo">%1$s drew the %2$s from the %3$s pile</string>
    <string name="meldAndDragDiscardHint">Meld your cards and then drag a discard to the Discard pile</string>
    <string name="nextRound">Play %s\'s round</string>
    <string name="skipDealing">Skip dealing</string>
    <string name="toDisableDealing">You can turn off the dealing animation in Settings</string>
    <string name="toStartGameHint">Add or delete players and then tap the Start Game button</string>
    <string name="nextRoundHint">Tap the Play %s\'s round button</string>
    <string name="tapMovingHandHint">Tap the moving hand to play its cards</string>
    <string name="showingComputerCards">Showing %s\'s cards; tap the hand again to play</string>
    <string name="hidingYourHandHint">Hiding your hand; pass the game to the next player</string>
    <string name="pickFromDrawOrDiscardHint">Pick from the Draw or Discard pile</string>
    <string name="dragYourCards">Drag here for a new meld</string>
    <string name="displayScores">Displaying current scores</string>
    <string name="now_playing">Playing %s\'s round</string>
    <string name="newGame">New Game</string>
    <string name="areYouSure">Are you sure you want to end this game and start another?</string>
    <string name="congratulationsName">Congratulations!</string>
    <string name="congratulationsDetails">%1$s won with the lowest score of %2$s. Winner cleans up!</string>
    <string name="isHuman">Human</string>
    <string name="isEasyDroid">Easy Droid</string>
    <string name="isHardDroid">Hard Droid</string>
    <string name="isExpertDroid">Expert Droid</string>
    <string name="defaultHumanPlayer">You</string>
    <string name="defaultComputerPlayer">Droid</string>
    <string name="addPlayersTitle">Add player</string>
    <string name="editPlayersTitle">Edit player</string>
    <string name="confirmDelete">Confirm delete player</string>
    <string name="areYouSureDelete">Are you sure you want to delete player "%s"?</string>
    <string name="yesDelete">Yes, delete</string>
    <string name="cantAddDelete">Start a new game to add or delete players</string>
    <string name="mustHaveTwoPlayer">You must keep at least two players; try editing the player instead</string>
    <string name="playerName">Name</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="genericString">%s</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_players">Players</string>
    <string name="add_player">Add</string>
    <string name="edit_player">Edit</string>
    <string name="delete_player">Delete</string>
    <string name="edit_delete_hint">Press and hold a player hand to edit or delete</string>
    <string name="show_computer_cards">Show Computer cards</string>
    <string name="animate_dealing">Animate dealing</string>
    <string name="tutorial_mode">Show introduction and hints</string>
    <string name="highlight_wildcards">Highlight wildcards with yellow</string>
    <string name="about">Problems? Please email us at pipper.publishing@gmail.com</string>
    <string name="did_you_remember">%s went out; it\'s your final turn - did you remember to meld?</string>
    <string name="help_title">Help</string>
    <string name="help_message">\n
        In this game you play 11 rounds against the computer and/or against other humans. The winner is the player who has the lowest score at the end of the game.\n\n
        You start with the round of 3\'s where you have 3 cards and 3\'s are wild (in addition to Jokers). You end with the round of Kings where you have 13 cards and Kings are wild.\n
        In each turn, draw from the Draw or Discard pile to your hand, meld your cards (by dragging them to the meld area on the screen), and discard a card to the Discard pile.
        Melds are 3 or more of the same rank, or 3 or more in a suit sequence, including as many wild cards as you like.\n\n
        A player is "out" when they have melded all their cards, giving them a score of 0 for the round.
        All other players get one more turn to improve their hands, or also go out. At the end of the round,
        your score for the round is the sum of the unmelded cards you have left. Cards count their face value
        except that unmelded wild cards count 20, and unmelded Jokers count 50 (so make sure to meld before you discard!)\n\n
        For example, to "go out" in the round of 3\'s you have to have a meld of 3 cards; in the round of 4\'s a meld of 4 cards; in round of 5\'s a meld of 5 cards (this is the hardest).  \n
        Starting in the round of 6\'s you can have 2 melds of 3 or a meld of 6, and it gets more flexible after that. When the Droid player goes out it will show you its hand and you can learn from what it does.
    </string>
    <string name="intro1_title">Welcome to Five Kings!</string>
    <string name="intro1_text">Five Kings is a card melding game. You play 11 rounds against the computer and/or against other humans. The winner is the player who has the lowest score at the end of the game.\n\n
        To play the first round, you tap the \"Start Game\" button, and then tap it again to play the 3\'s round where you are dealt 3 cards. To \"go out\" you have to make a meld of 3 cards.\n\n
        Melds are 3 or more cards of the same rank (for example, 3 Kings) or 3 of the same suit in a sequence (like 5-6-7 of spades).\n\n
        I\'ll start the 3\'s Round for you now."
    </string>
    <string name="intro2_title">The Players</string>
    <string name="intro2_text">The small cards represent You and other players (initially just the Droid player) and show your current score. When it\'s a player\'s turn the hand shakes.
    Tap the shaking hand to play it. If it\'s your hand (You) then you can decide what to do. I\'ll tap your hand to show you.</string>
    <string name="intro3_title">Your Cards</string>
    <string name="intro3_text">When it\'s your turn, your cards appear here. You get 3 cards in the 3\'s round, 4 cards in the 4\'s round and so on up to the King\'s round where you have 13 cards!
        To play your turn draw a card from the Draw pile or the Discard pile.</string>
    <string name="intro4_title">The Discard pile</string>
    <string name="intro4_text">The Draw and Discard piles shake to show you can draw from them. Tap the Discard pile to draw the card that is showing there. Or if you don\'t think it helps your hand…</string>
    <string name="intro5_title">The Draw pile</string>
    <string name="intro5_text">…you can tap the Draw pile and hope you are lucky! In the Five Kings deck there are two of each card from 3\'s to Kings, six Jokers, and an extra suit (lightning bolts).</string>
    <string name="intro6_title">Your Melds</string>
    <string name="intro6_text">To make melds, drag cards (one by one) to the meld area in the bottom row. You can add to an existing meld, or create a new one (by dragging into the dashed box).
    Melds are 3 or more of the same rank, or 3 or more in a suit sequence, including as many wild cards as you like.
        You can \"go out\" (finish the round) by melding all your cards. The other players get one more turn to improve their hands, or also go out.</string>
    <string name="intro7_title">Wild Cards</string>
    <string name="intro7_text">Use your wild cards to help you meld (for example, 5 spades - Joker - 7 spades). The Jokers are always wild. In addition, in the 3\'s round all 3\'s are wild, in the 4\'s round all 4\'s are wild and so on.
    Wildcards are highlighted so you remember to use them properly.</string>
    <string name="intro8_title">Finishing your turn</string>
    <string name="intro8_text">To end you turn, drag one card you don\'t want to the Discard pile. Make sure you\'ve made any melds before discarding, especially on your final turn!\n
        Then tap the next player (the shaking hand) to play its turn. After your final turn, your score for the round is the sum of the unmelded cards you have left.\n
        The round score will show after you discard. Cards count their face value except that unmelded wild cards count 20, and unmelded Jokers count 50!
    </string>
    <string name="intro9_title">Tips</string>
    <string name="intro9_text">1. The Draw and Discard pile shake when you should draw from one of them.\n
    2. Make sure to meld (3 or more cards) before you discard! In the rounds of 3,4, and 5 you make only one meld, but in the King\'s round you could have 3 melds of 3 cards plus a meld of 4 cards.\n
        3. Jokers are wild, and so are 3\'s in the 3\'s round, 4\'s in the 4\'s round and so on. Wild cards are highlighted by default.\n
        4. Watch which of your discards the Droid player picks up to see what melds it is working on.\n
    5. After another player goes out, you get one more turn. If you can\'t meld a wild card, make sure you discard it!\n\n
        To help you get started, in the first two rounds I\'ll show the Droid cards and some special hints.\n
        To not show this tutorial next time, go to Settings and uncheck Show introduction and hints
    </string>
    <string name="intro_button_text">Next</string>
    <string name="intro_end_button_text">Let\'s Play!</string>

</resources>
