<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright Jeffrey Pugh (pipper.publishing@gmail.com) (c) 2015. All rights reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/playerName"
        android:ems="10"
        android:id="@+id/player_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="italic"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Droid Type"
        android:id="@+id/textView"
        android:layout_below="@+id/player_name"
        android:textStyle="bold"
        android:textAlignment="viewEnd"
        android:layout_alignRight="@+id/player_name"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/textView">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isHuman"
            android:id="@+id/is_human"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/player_name"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isEasyDroid"
            android:id="@+id/is_easy_computer"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:enabled="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isHardDroid"
            android:id="@+id/is_hard_computer"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:enabled="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isExpertDroid"
            android:id="@+id/is_expert_computer"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:enabled="true"/>
    </RadioGroup>

</RelativeLayout>
