<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#0099cc"
             android:id="@+id/fullscreen_content"
             tools:context=".FiveKings"
             android:paddingTop="@dimen/abc_action_bar_stacked_max_height"
             android:paddingBottom="48dp">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="?buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >

    </LinearLayout>

    <TextView
        android:id="@+id/round_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Score"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fullscreen_content_controls"/>

    <LinearLayout
        android:id="@+id/score_and_game"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/round_number"
        android:layout_alignLeft="@id/round_number"
        android:weightSum="1">

        <TableLayout
            android:id="@+id/scoreDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6">
        </TableLayout>

        <TextView
            android:id="@+id/game_info_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_weight="0.4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_above="@+id/Play"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score_and_game"
        android:id="@+id/play_area"
        android:weightSum="4"
        >

        <LinearLayout
            android:id="@+id/draw_and_discard_piles"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal">

            <ImageButton
                android:id="@+id/drawPile"
                android:layout_width="72dp"
                android:layout_height="96dp"
                android:contentDescription="@string/Draw"
                android:text="@string/Draw"
                android:src="@drawable/b2fv"/>

            <ImageButton
                android:id="@+id/discardPile"
                android:layout_width="72dp"
                android:layout_height="96dp"
                android:contentDescription="@string/Discard"
                android:text="@string/Discard"
                android:src="@drawable/b2fv"/>
        </LinearLayout>

        <TextView
            android:id="@+id/info_line"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/blank"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:textStyle="normal"/>

        <ImageView
            android:id="@+id/current_cards"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:gravity="center_horizontal|bottom"
            android:layout_weight="1"
            android:contentDescription="@string/current_cards"
            android:cropToPadding="true"
            android:layout_gravity="center_horizontal"/>

        <ImageView
            android:id="@+id/current_melds"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:contentDescription="@string/current_melds"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <Button
        android:id="@+id/Play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Play"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>
